--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF_Demos"
-             StartupUri="./sample/use_tab_control/Window1.xaml">
+             StartupUri="./property/APBinding.xaml">
     <Application.Resources>
          
     </Application.Resources>
