--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="WPF_Demos.App"
+﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF_Demos"
-             StartupUri="./x_namespace/MarkupExtension/xType.xaml">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="WPF_Demos.App"
+             StartupUri="./template/control_tmp/Window2.xaml">
     <Application.Resources>
-         
+        
     </Application.Resources>
 </Application>
